src/test/resources/invalid/typecheck/Return_Unnecessary.vas
class Main is
    method noreturn() is
        return false
    end
end